horizontal scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+
+body{
+    overflow-x: hidden;
+}
 .header{
     background-image:url('bg.jpg');
     background-repeat: no-repeat;
@@ -38,4 +43,6 @@ margin-top: 2rem;
 
 .container.container-fluid{
     margin: 0 !important;
+  
+    
 }
